--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,22 +30,26 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.MainActivity">
+        <activity android:name=".ui.LauncherActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.MainActivity"/>
+        <activity android:name=".ui.MyDownloadActivity" />
         <activity android:name=".ui.SearchActivity" />
-        <activity android:name=".ui.ShowImageActivity" android:theme="@style/FullscreenTheme" />
+        <activity
+            android:name=".ui.ShowImageActivity"
+            android:theme="@style/FullscreenTheme" />
         <activity android:name=".ui.MoreActivity" />
 
         <!-- Rich push 核心功能 since 2.0.6 -->
         <activity
             android:name="cn.jpush.android.ui.PopWinActivity"
             android:exported="false"
-            android:theme="@style/MyDialogStyle"/>
+            android:theme="@style/MyDialogStyle" />
 
         <!-- Required SDK核心功能 -->
         <activity
@@ -134,7 +138,6 @@
             android:name="JPUSH_APPKEY"
             android:value="c4436241da6745e2f8109770" />
 
-        <activity android:name=".ui.MyDownloadActivity"></activity>
     </application>
 
 </manifest>
