--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,20 +30,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.LauncherActivity">
+        <activity android:name=".ui.activitys.LauncherActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.MainActivity"/>
-        <activity android:name=".ui.MyDownloadActivity" />
-        <activity android:name=".ui.SearchActivity" />
+        <activity android:name=".ui.activitys.MainActivity"/>
+        <activity android:name=".ui.activitys.MyDownloadActivity" />
+        <activity android:name=".ui.activitys.SearchActivity" />
         <activity
-            android:name=".ui.ShowImageActivity"
+            android:name=".ui.activitys.ShowImageActivity"
             android:theme="@style/FullscreenTheme" />
-        <activity android:name=".ui.MoreActivity" />
+        <activity android:name=".ui.activitys.MoreActivity" />
 
         <!-- Rich push 核心功能 since 2.0.6 -->
         <activity
