双击返回键推出APP，曲谱展示界面优化

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activitys.MainActivity"/>
+        <activity
+            android:name=".ui.activitys.MainActivity"
+            android:launchMode="singleTop" />
         <activity android:name=".ui.activitys.MyDownloadActivity" />
         <activity android:name=".ui.activitys.SearchActivity" />
         <activity
