关于我们完成，增加空白布局，UI微小改动

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -140,6 +140,7 @@
             android:name="JPUSH_APPKEY"
             android:value="c4436241da6745e2f8109770" />
 
+        <activity android:name=".ui.activitys.AboutUsActivity"></activity>
     </application>
 
 </manifest>
