--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -140,7 +140,8 @@
             android:name="JPUSH_APPKEY"
             android:value="c4436241da6745e2f8109770" />
 
-        <activity android:name=".ui.activitys.AboutUsActivity"></activity>
+        <activity android:name=".ui.activitys.AboutUsActivity" />
+        <activity android:name=".ui.activitys.MyCollectionActivity"></activity>
     </application>
 
 </manifest>
