--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,10 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        ndk {
+            //设置支持的SO库架构
+            abiFilters 'armeabi' // 'x86', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
+        }
     }
     buildTypes {
         release {
@@ -62,7 +66,8 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.8.1'
     compile 'com.github.chrisbanes:PhotoView:2.0.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
-    compile 'com.tencent.bugly:crashreport:2.6.5'
+    compile 'com.tencent.bugly:crashreport_upgrade:1.3.1'
+    compile 'com.tencent.bugly:nativecrashreport:3.3.1'
     compile 'com.orhanobut:logger:2.1.1'
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'io.reactivex.rxjava2:rxjava:2.1.2'
