--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,10 +18,10 @@ android {
         versionCode 3
         versionName "1.0.3"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        ndk {
+        /*ndk {
             //设置支持的SO库架构
             abiFilters 'armeabi' // 'x86', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
-        }
+        }*/
     }
     buildTypes {
         release {
@@ -76,6 +76,7 @@ dependencies {
     compile 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
     compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.4@aar'
     compile 'com.squareup.sqlbrite2:sqlbrite:2.0.0'
+    compile 'com.fynn.fluidlayout:fluidlayout:1.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
