--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
             android:name=".ui.activitys.LauncherActivity"
             android:theme="@style/FullscreenTheme">
@@ -39,25 +38,20 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ui.activitys.MainActivity"
-            android:launchMode="singleTop"
-            android:configChanges="orientation|keyboardHidden|screenSize" />
-
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:launchMode="singleTop" />
         <activity
             android:name=".ui.activitys.MyDownloadActivity"
             android:configChanges="orientation|keyboardHidden|screenSize" />
-
         <activity
             android:name=".ui.activitys.SearchActivity"
             android:configChanges="orientation|keyboardHidden|screenSize" />
-
         <activity
             android:name=".ui.activitys.ShowImageActivity"
-            android:theme="@style/FullscreenTheme"
-            android:configChanges="orientation|keyboardHidden|screenSize" />
-
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:theme="@style/FullscreenTheme" />
         <activity
             android:name=".ui.activitys.MoreActivity"
             android:configChanges="orientation|keyboardHidden|screenSize" />
@@ -174,19 +168,16 @@
         <activity
             android:name=".ui.activitys.AboutUsActivity"
             android:configChanges="orientation|keyboardHidden|screenSize" />
-
         <activity
             android:name=".ui.activitys.MyCollectionActivity"
             android:configChanges="orientation|keyboardHidden|screenSize" />
-
         <activity
             android:name=".ui.activitys.TellUsActivity"
             android:configChanges="orientation|keyboardHidden|screenSize" />
-
         <activity
             android:name=".ui.activitys.WriteFeedbackActivity"
             android:configChanges="orientation|keyboardHidden|screenSize" />
-
+        <activity android:name=".ui.activitys.ShowOpernByCategoryActivity"></activity>
     </application>
 
 </manifest>
