--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,8 +29,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-
         <activity
             android:name=".ui.activitys.LauncherActivity"
             android:theme="@style/FullscreenTheme">
@@ -40,7 +38,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ui.activitys.MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
@@ -180,7 +177,8 @@
         <activity
             android:name=".ui.activitys.WriteFeedbackActivity"
             android:configChanges="orientation|keyboardHidden|screenSize" />
-        <activity android:name=".ui.activitys.ShowOpernByCategoryActivity"></activity>
+        <activity android:name=".ui.activitys.ShowOpernByCategoryActivity" />
+        <activity android:name=".ui.activitys.LastUpdateOpernInfoActivity"></activity>
     </application>
 
 </manifest>
