--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,7 @@ dependencies {
     compile 'org.greenrobot:greendao:3.2.2'
     compile 'com.fynn.fluidlayout:fluidlayout:1.0'
     compile 'com.youth.banner:banner:1.4.10'
+    compile 'com.wang.avi:library:2.1.3'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
