Toast改版,首页轮播内容改动,增加推荐网站

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -184,6 +184,7 @@
         <activity android:name=".ui.activitys.LastUpdateOpernInfoActivity" />
         <activity android:name=".ui.activitys.MusicChartActivity" />
         <activity android:name=".ui.activitys.MusicChartDetailActivity" />
+        <activity android:name=".ui.activitys.WebViewActivity" />
     </application>
 
 </manifest>
