--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,21 @@
 /build
 /captures
 .externalNativeBuild
+.idea/compiler.xml
+.idea/copyright/
+.idea/gradle.xml
+.idea/inspectionProfiles/
+.idea/markdown-navigator.xml
+.idea/markdown-navigator/
+.idea/misc.xml
+.idea/modules.xml
+.idea/runConfigurations.xml
+.idea/vcs.xml
+apks/
+app/src/androidTest/
+app/src/main/java/com/yun/opern/db/DaoMaster.java
+app/src/main/java/com/yun/opern/db/DaoSession.java
+app/src/main/java/com/yun/opern/db/SearchHistoryDao.java
+app/src/test/
+gradle/
+opern.jks
