--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,18 +6,18 @@ android {
         signing {
             keyAlias 'opern'
             keyPassword '123456'
-            storeFile file('C:/WorkSpace/Opern/opern.jks')
+            storeFile file('D:/Workspaces/Opern/opern.jks')
             storePassword '123456'
         }
     }
     compileSdkVersion 25
-    buildToolsVersion '27.0.0'
+    buildToolsVersion '27.0.1'
     defaultConfig {
         applicationId "com.yun.opern"
         minSdkVersion 19
         targetSdkVersion 25
-        versionCode 7
-        versionName "1.1.1"
+        versionCode 8
+        versionName "1.1.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         manifestPlaceholders = [BUGLY_APP_CHANNEL_VALUE: "default_channel"]
     }
